--- a/compile-bbb.env
+++ b/compile-bbb.env
@@ -3,7 +3,7 @@
 # Environment variables to compile UniBone on BBB itself
 # Used in Makefiles
 
-export QUNIBONE_ROOT=$HOME
+export QUNIBONE_DIR=$HOME
 export BBB_CC=gcc
 export PRU_CGT=/usr/share/ti/cgt-pru/
 ln -s /usr/bin/ /usr/share/ti/cgt-pru/bin
