--- a/qunibone-platform.env.example
+++ b/qunibone-platform.env.example
@@ -1,7 +1,7 @@
 
 # qunibone-platform.env
-# Settings to adpater generic "QUniBone" software installation
-# to "UniBone" or "QBone" platform.
+# Settings to adapt generic "QUniBone" software installation
+# to either "UniBone" or "QBone" hardware platform.
 #
 # Bound to specific hardware, not part of github repository
 
