--- a/profile.example
+++ b/profile.example
@@ -41,7 +41,7 @@ case `tty` in
         hit=`screen -ls | grep --count QUniBone`
         if [ $hit -ne 0 ]
         then
-           read -p "Background QUniBone application running. Connect ? [y/n] " -r
+           read -p "Background QUniBone application running. Connect with \"screen\" ? [y/n] " -r
            if [[ $REPLY =~ ^[Yy]$ ]]
            then
              screen -d -r
