--- a/qunibone-platform.env.example
+++ b/qunibone-platform.env.example
@@ -3,12 +3,13 @@
 # Settings to adapt generic "QUniBone" software installation
 # to either "UniBone" or "QBone" hardware platform.
 #
-# Bound to specific hardware, not part of github repository
+# Bound to specific hardware, not part of github repository.
+# Must default to "UNIBONE" config!
 
 # for file tree
-#PLATFORM_SUFFIX=_q
-PLATFORM_SUFFIX=_u
+#QUNIBONE_PLATFORM_SUFFIX=_q
+QUNIBONE_PLATFORM_SUFFIX=_u
 
-# for makefiles
-#MAKE_QUNIBUS=QBUS
-MAKE_QUNIBUS=UNIBUS
+# Important for makefiles
+#QUNIBONE_PLATFORM=QBUS
+QUNIBONE_PLATFORM=UNIBUS
