--- a/10.03_app_demo/2_src/makefile
+++ b/10.03_app_demo/2_src/makefile
@@ -1,9 +1,9 @@
 # Main switch between UNIBUS and QBUS makefile
 
-ifeq ($(MAKE_QUNIBUS),UNIBUS)
+ifeq ($(QUNIBONE_PLATFORM),UNIBUS)
         include makefile_u
-else ifeq  ($(MAKE_QUNIBUS),QBUS)
+else ifeq  ($(QUNIBONE_PLATFORM),QBUS)
         include makefile_q
 else
-	$(error Set MAKE_QUNIBUS to UNIBUS or QBUS!)
+	$(error Set QUNIBONE_PLATFORM to UNIBUS or QBUS!)
 endif
