reorganized 10.03_app_demo/5_applications

--- a/qunibone-platform.env.example
+++ b/qunibone-platform.env.example
@@ -6,10 +6,10 @@
 # Bound to specific hardware, not part of github repository.
 # Must default to "UNIBONE" config!
 
-# for file tree
+# for file tree (was PLATFORM_SUFFIX)
 #QUNIBONE_PLATFORM_SUFFIX=_q
 QUNIBONE_PLATFORM_SUFFIX=_u
 
-# Important for makefiles
+# Important for makefiles (was MAKE_QUNIBUS)
 #QUNIBONE_PLATFORM=QBUS
 QUNIBONE_PLATFORM=UNIBUS
