--- a/10.03_app_demo/2_src/makefile_q
+++ b/10.03_app_demo/2_src/makefile_q
@@ -109,6 +109,7 @@ OBJECTS = $(OBJDIR)/application.o	\
 	$(OBJDIR)/rx0102drive.o	\
 	$(OBJDIR)/rx0102ucpu.o	\
 	$(OBJDIR)/rx11.o	\
+	$(OBJDIR)/rx211.o	\
 	$(OBJDIR)/rs232.o \
 	$(OBJDIR)/rs232adapter.o \
 	$(OBJDIR)/dl11w.o \
@@ -248,13 +249,16 @@ $(OBJDIR)/rk05.o :  $(DEVICE_SRC_DIR)/rk05.cpp $(DEVICE_SRC_DIR)/rk05.hpp
 $(OBJDIR)/rk11.o :  $(DEVICE_SRC_DIR)/rk11.cpp $(DEVICE_SRC_DIR)/rk11.hpp
 	$(CC) $(CCFLAGS) -Wno-missing-field-initializers $< -o $@
 
-$(OBJDIR)/rx0102drive.o :  $(DEVICE_SRC_DIR)/rx0102drive.cpp $(DEVICE_SRC_DIR)/rx0102drive.hpp
+$(OBJDIR)/rx11.o :  $(DEVICE_SRC_DIR)/rx11.cpp $(DEVICE_SRC_DIR)/rx11211.hpp
+	$(CC) $(CCFLAGS) $< -o $@
+
+$(OBJDIR)/rx211.o :  $(DEVICE_SRC_DIR)/rx211.cpp $(DEVICE_SRC_DIR)/rx11211.hpp
 	$(CC) $(CCFLAGS) $< -o $@
 
 $(OBJDIR)/rx0102ucpu.o :  $(DEVICE_SRC_DIR)/rx0102ucpu.cpp $(DEVICE_SRC_DIR)/rx0102ucpu.hpp
 	$(CC) $(CCFLAGS) $< -o $@
 
-$(OBJDIR)/rx11.o :  $(DEVICE_SRC_DIR)/rx11.cpp $(DEVICE_SRC_DIR)/rx11.hpp
+$(OBJDIR)/rx0102drive.o :  $(DEVICE_SRC_DIR)/rx0102drive.cpp $(DEVICE_SRC_DIR)/rx0102drive.hpp
 	$(CC) $(CCFLAGS) $< -o $@
 
 $(OBJDIR)/uda.o :   $(DEVICE_SRC_DIR)/uda.cpp $(DEVICE_SRC_DIR)/uda.hpp
