Initial implementation of RF11/RS11 fixed head disk controller and drives. Passing ZRFB and ZRFC, ZRFA passes up to test 115.

--- a/10.03_app_demo/2_src/makefile_u
+++ b/10.03_app_demo/2_src/makefile_u
@@ -103,6 +103,8 @@ OBJECTS = $(OBJDIR)/application.o	\
     $(OBJDIR)/rl11.o	\
     $(OBJDIR)/rk11.o        \
     $(OBJDIR)/rk05.o        \
+    $(OBJDIR)/rf11.o    \
+    $(OBJDIR)/rs11.o    \
 	$(OBJDIR)/uda.o         \
 	$(OBJDIR)/mscp_server.o \
 	$(OBJDIR)/mscp_drive.o \
@@ -249,6 +251,12 @@ $(OBJDIR)/rk05.o :  $(DEVICE_SRC_DIR)/rk05.cpp $(DEVICE_SRC_DIR)/rk05.hpp
 
 $(OBJDIR)/rk11.o :  $(DEVICE_SRC_DIR)/rk11.cpp $(DEVICE_SRC_DIR)/rk11.hpp
 	$(CC) $(CCFLAGS) -Wno-missing-field-initializers $< -o $@
+
+$(OBJDIR)/rs11.o :  $(DEVICE_SRC_DIR)/rs11.cpp $(DEVICE_SRC_DIR)/rs11.hpp
+	$(CC) $(CCFLAGS) $< -o $@
+
+$(OBJDIR)/rf11.o :  $(DEVICE_SRC_DIR)/rf11.cpp $(DEVICE_SRC_DIR)/rf11.hpp
+	$(CC) $(CCFLAGS) $< -o $@
 
 $(OBJDIR)/rx11.o :  $(DEVICE_SRC_DIR)/rx11.cpp $(DEVICE_SRC_DIR)/rx11211.hpp
 	$(CC) $(CCFLAGS) $< -o $@
